--- a/less/content.less
+++ b/less/content.less
@@ -252,7 +252,8 @@ section {
         a:link, a:visited, a:active, a:hover {
             font-weight: 500;
             color: @component-active-color;
-            background-size: 0;
+            background:none;
+            border:0;
         }
     }
     li:nth-child(3),
